--- a/app/src/main/res/layout/itemview.xml
+++ b/app/src/main/res/layout/itemview.xml
@@ -5,9 +5,9 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@mipmap/ic_launcher"
+        android:id="@+id/avatar_img"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_vertical"
         />
 
