--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="write_bg">#ffffff</color>
     <color name="common_line_color">#E0E0E0</color>
     <color name="colorTop">#419cc8</color>
+    <color name="base_pressed_bg">#f5f5f5</color>
 </resources>
